--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -4,8 +4,12 @@ one:
   title: MyString
   description: MyText
   price: 9.99
-
 two:
   title: MyString
   description: MyText
   price: 9.99
+pragprog:
+  title: The Pragmatic Programmer
+  description:
+    Your Journey To Mastery, 20th Anniversary Edition (2nd Edition)
+  price: 39.99
